# obligatorio-dinello-otero-dutradasilveira

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.deploy.api  Dockerfile.deploy.api.dockerignore  README.md  docker-compose.prod.yml  docker-compose.yml
.claude/: settings.json
.claude/commands/: experimento.md  explicame.md
.claude/hooks/: guard_nda_commit.sh
.claude/skills/obligatorio-mlprod/: SKILL.md  consigna.md  temario.md
.ebextensions/: security-group.config
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/notebooks/: .gitkeep  eda.ipynb  explainability.ipynb
backend/src/: __init__.py  config.py
backend/src/api/: main.py  schemas.py
backend/src/api/routers/: clip_predict.py  health.py  metrics.py  model_info.py  predict.py
backend/src/data/: __init__.py  build_clips.py  build_dataset.py  clips_dataset.py  config.py  dataset.py  download.py  frames.py  labels.py  splits.py  windows.py
backend/src/features/: __init__.py  preprocess.py  tabular.py  visual.py
backend/src/models/: __init__.py  clip_config.py  clip_export.py  clip_gradcam.py  clip_model.py  config.py  evaluate.py  explain.py  export.py  quantize.py  train.py  train_clips.py  tune.py
backend/src/monitoring/: __init__.py  logging.py  metrics.py
backend/src/serving/: clip_inference.py
backend/tests/: conftest.py  test_background_sampling.py  test_build_clips.py  test_clip_config.py  test_clip_export.py  test_clip_gradcam.py  test_clip_inference.py  test_clip_model.py  test_clip_predict.py  test_clip_schemas.py  test_clips_dataset.py  test_config_clip.py  test_data_config.py  test_download.py  test_explain.py  test_features_tabular.py  test_features_visual.py  test_frames.py  test_health.py  test_leakage.py  test_monitoring.py  test_pointintime.py  test_predict.py  test_preprocess.py  test_quantize.py  test_train_clips.py  test_train_smoke.py  test_tune.py
configs/: README.md  api.yaml  dataset.yaml  splits.yaml  train.yaml  train_clips.yaml
docs/: consigna.md
docs/superpowers/plans/: 2026-06-13-cnn-clips-datos.md  2026-06-14-cnn-clips-gradcam.md  2026-06-14-cnn-clips-modelo.md  2026-06-18-cnn-clips-frontend.md  2026-06-18-cnn-clips-serving.md
docs/superpowers/specs/: 2026-06-13-cnn-clips-datos-design.md  2026-06-14-cnn-clips-gradcam-design.md  2026-06-14-cnn-clips-modelo-design.md  2026-06-18-cnn-clips-frontend-design.md  2026-06-18-cnn-clips-serving-design.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/mockups/: predict-b-editorial.html  predict-c-tactical.html  predict-video.html  predict.html
frontend/src/: App.tsx  examples.json  index.css
frontend/src/components/: BatchForm.tsx  BatchResults.tsx  ClipPrediction.tsx  GradcamViewer.tsx  Pitch.tsx  PredictionPanel.tsx  VideoForm.tsx  WindowForm.tsx
frontend/src/lib/: api.ts  format.test.ts  format.ts  types.ts
mlflow/: Dockerfile
monitoring/grafana/dashboards/: soccernet.json
monitoring/grafana/provisioning/dashboards/: provider.yml
monitoring/grafana/provisioning/datasources/: datasource.yml
monitoring/prometheus/: prometheus.yml
report/: bitacora.md  clips_summary.json  dataset_summary.json  inference_examples.md  informe.md
report/metrics/: metrics_v0.json
scripts/: deploy_eb.sh
