[project]
name = "soccernet-backend"
version = "0.0.0"
description = "API and training code for the SoccerNet event classifier."
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic-settings[yaml]>=2.5",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "httpx>=0.27",
]

# This is an application, not an installable library: uv installs the dependencies
# but does not build/install the project itself.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
# Put the backend root on sys.path so tests can `import src...` without packaging.
pythonpath = ["."]
