[project]
name = "soccernet-backend"
version = "0.0.0"
description = "API and training code for the SoccerNet event classifier."
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic-settings[yaml]>=2.5",
    # Needed by src/features (shared by training and serving) and by the data pipeline.
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=17.0",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "httpx>=0.27",
    # EDA notebook.
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "seaborn>=0.13",
]
# Dataset download/build only. Kept out of the API image to keep it slim:
# SoccerNet pulls heavy transitive deps not needed at serving time.
data = [
    "SoccerNet>=0.1.60",
]

# This is an application, not an installable library: uv installs the dependencies
# but does not build/install the project itself.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
# Notebooks use idioms ruff flags (sys.path before imports, semicolons to mute plot
# output). They are verified by execution (nbconvert), not by lint.
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
# Put the backend root on sys.path so tests can `import src...` without packaging.
pythonpath = ["."]
