[project]
name = "soccernet-backend"
version = "0.0.0"
description = "API and training code for the SoccerNet event classifier."
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115",
    "pydantic-settings[yaml]>=2.5",
    # Needed by src/features (shared by training and serving) and by the data pipeline.
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=17.0",
    # Model + fitted preprocessor: the API loads the serialized bundle at startup, so
    # these must be in the prod image (not just training). joblib (de)serializes it.
    "scikit-learn>=1.5",
    "xgboost>=2.1",
    "joblib>=1.4",
    # Prometheus metrics exposed at /metrics for monitoring (Fase 3). Runtime dep of the API.
    "prometheus-client>=0.21",
]

[dependency-groups]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "httpx>=0.27",
    # EDA + explainability notebooks.
    "jupyter>=1.1",
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    # SHAP plots for the explainability notebook only. The API does NOT use this: it
    # computes the same TreeSHAP values via XGBoost's native pred_contribs (no heavy
    # numba/llvmlite in the serving image).
    "shap>=0.46",
]
# Dataset download/build only. Kept out of the API image to keep it slim:
# SoccerNet pulls heavy transitive deps not needed at serving time.
data = [
    "SoccerNet>=0.1.60",
    # Extracción de frames de los videos para el dataset de clips (Fase 3.5).
    "opencv-python>=4.10",
]
# Experiment tracking + hyperparameter optimisation. Only needed at training time
# (logging runs + model registry, Optuna search), never at serving: the API loads the
# exported bundle directly. Kept out of the API image.
ml = [
    "mlflow>=2.16",
    "optuna>=4.0",
]
# CNN multi-frame de clips (Fase 3.5). Solo en training; el serving (sub-proyecto 4)
# las moverá/sumará a prod. torch trae soporte MPS en Apple Silicon.
cnn = [
    "torch>=2.4",
    "torchvision>=0.19",
]

# This is an application, not an installable library: uv installs the dependencies
# but does not build/install the project itself.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
# Notebooks use idioms ruff flags (sys.path before imports, semicolons to mute plot
# output). They are verified by execution (nbconvert), not by lint.
extend-exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
# Put the backend root on sys.path so tests can `import src...` without packaging.
pythonpath = ["."]
